# adaptive-mesh-texture

./: README.md
Eval/: README.md
MeshTexture/: CMakeLists.txt  README.md
MeshTexture/Lee/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h
MeshTexture/Vincent/: CMakeLists.txt
MeshTexture/Vincent/Core/: CMakeLists.txt
MeshTexture/Vincent/Core/Utils/: CMakeLists.txt
MeshTexture/Vincent/Core/Utils/Include/: bit_array.h  camera.h  framemanager.h  matrix.h  my_mesh_encoder.h  optionmanager.h  space_time_sampler.h
MeshTexture/Vincent/Core/Utils/Source/: bit_array.cc  camera.cc  framemanager.cc  my_mesh_encoder.cc  optionmanager.cc  space_time_sampler.cc
MeshTexture/Vincent/Lib/: CMakeLists.txt
MeshTexture/Vincent/Lib/Logger/: CMakeLists.txt
MeshTexture/Vincent/Lib/Logger/include/: Logger.h
Rendering/: README.md
Rendering/OpenGL/: mesh_color.frag  mesh_color.vert  mesh_color_CP.frag
Rendering/Unity/: OFFLoader.cs  README.md  meshColor_split.shader
